--- a/Tellianttimesheettest/pom.xml
+++ b/Tellianttimesheettest/pom.xml
@@ -34,39 +34,51 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>3.7.1</version>
 		</dependency>
-		
+
 		<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>4.1.1</version>
-</dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.0</version>
 		</dependency>
-		
-	
-  <dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-api</artifactId>
-    <version>2.13.3</version>
-  </dependency>
-  
-  <dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>2.13.3</version>
-  </dependency>
-  <!-- https://mvnrepository.com/artifact/br.eti.kinoshita/testlink-java-api -->
-  
-<dependency>
-    <groupId>br.eti.kinoshita</groupId>
-    <artifactId>testlink-java-api</artifactId>
-    <version>1.9.3-2</version>
-</dependency>
-  
-</dependencies>
+
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/br.eti.kinoshita/testlink-java-api -->
+
+		<dependency>
+			<groupId>br.eti.kinoshita</groupId>
+			<artifactId>testlink-java-api</artifactId>
+			<version>1.9.3-2</version>
+		</dependency>
+
+	</dependencies>
+	<build>
+	<plugins>
+	<plugin>
+	<artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <fork>true</fork>
+                <executable>C:\Program Files\Java\jdk1.8.0_271\bin\javac.exe</executable>
+            </configuration>
+	</plugin>
+	</plugins>
+	</build>
 
 </project>
